Added animation for text recording changed theme to T-mobile colors and removed fragment tags

--- a/Project/line/build.gradle
+++ b/Project/line/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://dl.bintray.com/ssynhtn-org/android-wave-view' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
